Fix settings form position on mobile

--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -499,4 +499,8 @@ form.signup h4 {
    margin: 0 16%;
   }
 
+  .user--settings {
+    right: 7%;
+  }
+
 }
